// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationStatusCard matches snapshot when status = ERROR 1`] = `
<div>
  <p
    class="StyledProps--font StyledProps--main verificationStatusCard StyledProps--background-red50 StyledProps--color StyledProps--color-red900"
    style="display: flex; align-items: center;"
  >
    <span
      class="bp3-icon bp3-icon-warning-sign StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red900"
      icon="warning-sign"
    >
      <svg
        data-icon="warning-sign"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          warning-sign
        </desc>
        <path
          d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    error
  </p>
</div>
`;

exports[`VerificationStatusCard matches snapshot when status = IN_PROGRESS 1`] = `
<div>
  <p
    class="StyledProps--font StyledProps--main verificationStatusCard StyledProps--background-primary6 StyledProps--color StyledProps--color-primary2"
    style="display: flex; align-items: center;"
  >
    <span
      class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
      data-icon="deployment-inprogress-new"
    >
      <svg
        height="12"
        viewBox="0 0 14 14"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <rect
            fill="#25a6f7"
            height="14"
            rx="4"
            width="14"
          />
          <path
            d="M7 1.8a5.2 5.2 0 110 10.4A5.2 5.2 0 017 1.8"
            fill="#fff"
          />
          <path
            d="M7.4 6.5V3H6.3v4.7h4V6.5z"
            fill="#25a6f7"
          />
        </g>
      </svg>
    </span>
    inProgress
  </p>
</div>
`;

exports[`VerificationStatusCard matches snapshot when status = VERIFICATION_FAILED 1`] = `
<div>
  <p
    class="StyledProps--font StyledProps--main verificationStatusCard StyledProps--background-red50 StyledProps--color StyledProps--color-red900"
    style="display: flex; align-items: center;"
  >
    <span
      class="bp3-icon bp3-icon-warning-sign StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red900"
      icon="warning-sign"
    >
      <svg
        data-icon="warning-sign"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          warning-sign
        </desc>
        <path
          d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    failed
  </p>
   
</div>
`;

exports[`VerificationStatusCard matches snapshot when status = VERIFICATION_PASSED 1`] = `
<div>
  <p
    class="StyledProps--font StyledProps--main verificationStatusCard StyledProps--background-green50 StyledProps--color StyledProps--color-green800"
    style="display: flex; align-items: center;"
  >
    <span
      class="bp3-icon bp3-icon-tick-circle StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green800"
      icon="tick-circle"
    >
      <svg
        data-icon="tick-circle"
        height="12"
        viewBox="0 0 16 16"
        width="12"
      >
        <desc>
          tick-circle
        </desc>
        <path
          d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    passed
  </p>
</div>
`;
